[package]
name = "binding_statements"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { version = "54.3.1", features = ["prettyprint"] }
dotenvy = "0"
snowflake-api = { path = "../../../snowflake-api"}
tokio = {version = "1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
